Added validation to notify user editable and fuzzy searching are mutually exclusive options.

--- a/src/main/resources/jp/ikedam/jenkins/plugins/extensible_choice_parameter/Messages.properties
+++ b/src/main/resources/jp/ikedam/jenkins/plugins/extensible_choice_parameter/Messages.properties
@@ -27,6 +27,7 @@ TextareaChoiceListProvider.DisplayName=Textarea Choice Parameter
 SystemGroovyChoiceListProvider.DisplayName=System Groovy Choice Parameter
 ExtensibleChoiceParameterDefinition.Name.empty=Cannot be blank.
 ExtensibleChoiceParameterDefinition.Name.invalid=This name is not handled correctly by Jenkins. Recommended to consist only with alphabets, numbers, and underscores.
+ExtensibleChoiceParameterDefinition.Editable.Fuzzy.invalid=A field cannot be both editable and fuzzy searchable.
 GlobalTextareaChoiceListEntry.Name.empty=Cannot be blank.
 GlobalTextareaChoiceListEntry.Name.invalid=Name must start with an alphabetical letter or an underscore, and consists of alphabetical letters, underscores, or numeric letters.
 FilenameChoiceListProvider.DisplayName=File Choice Parameter
